# Blog-and-OJ

./: .gitignore
Online_Judge/: .gitignore  autogen.sh  runner.sh
Online_Judge/Common/Log/: Buffer.cpp  Buffer.hpp  Format.cpp  Format.hpp  Level.hpp  Logger.cpp  Logger.hpp  Looper.cpp  Looper.hpp  Message.hpp  Sink.cpp  Sink.hpp  a.out  clog.hpp  main.cpp  util.cpp  util.hpp
Online_Judge/Common/Pool/: ThreadPool.cpp  ThreadPool.hpp
Online_Judge/Common/Util/: Tool.cpp  Tool.hpp
Online_Judge/Compile/: CMakeLists.txt  Compile_Run.cpp  Compile_Run.hpp  Compile_Server.cpp  Compiler.cpp  Compiler.hpp  Runner.cpp  Runner.hpp
Online_Judge/Compile/temp/: 1772640454751_2.cpp  1772724184218_1.cpp
Online_Judge/FileTransfer/: Download.cpp  Download.hpp  Upload.cpp  Upload.hpp  example.txt
Online_Judge/OJ/: CMakeLists.txt  Control.cpp  Control.hpp  Model.cpp  Model.hpp  OJ_Server.cpp  User.hpp  View.cpp  View.hpp  oj_Model.cpp  oj_Model.hpp  ques.txt
Online_Judge/OJ/Questions/: Explain.txt  questions.list
Online_Judge/OJ/Questions/1/: tail.cpp
Online_Judge/OJ/Questions/2/: desc.txt  header.cpp  tail.cpp
Online_Judge/OJ/Questions/Data/DataGenerate/: NormalGenerate.py
Online_Judge/OJ/Questions/Data/input/1/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
Online_Judge/OJ/Questions/Data/output/1/: 1.out  10.out  2.out  3.out  5.out  6.out  7.out  8.out  9.out
Online_Judge/OJ/conf/: service_machine.conf
Online_Judge/OJ/template_html/: all_questions.html  one_question.html  one_question1.html
Online_Judge/OJ/template_html/index/: introduction.html
Online_Judge/OJ/wwwroot/: index.html
Online_Judge/Search/Http/: CMakeLists.txt  Http_Server.cpp
Online_Judge/Search/Http/wwwroot/: index.html
Online_Judge/Search/Index/: Index.cpp  Index.hpp  Log.hpp  Searcher.cpp  Searcher.hpp
Online_Judge/Search/Json/: Makefile  json.cpp
Online_Judge/Search/Parse/: CMakeLists.txt  Parser.cpp  Util.cpp  Util.hpp
Online_Judge/Test/: a.out  gRpc.cpp  test_mysql.cpp
Online_Judge/Test/grpc/: CMakeLists.txt  client.cpp  rpc.grpc.pb.cc  rpc.grpc.pb.h  rpc.pb.cc  rpc.pb.h  rpc.proto  server.cpp
Online_Judge/Test/test_grcp/: CMakeLists.txt  client.cpp  rpc.proto  run.sh  test.sh
Online_Judge/Test/test_grpc/: CMakeLists.txt
Online_Judge/Test/test_grpc/clients/: client.cpp
Online_Judge/Test/test_grpc/protos/: my_service.grpc.pb.cpp  my_service.grpc.pb.h  my_service.pb.cpp  my_service.pb.h  my_service.proto
Online_Judge/Test/test_grpc/servers/: server.cpp
backend/: pom.xml
backend/src/main/java/com/kob/backend/config/: RedisConfig.java
backend/src/main/java/com/kob/backend/controller/: FileController.java
backend/src/main/java/com/kob/backend/controller/oj/: AddRecordController.java  GetlistRecordController.java
backend/src/main/java/com/kob/backend/controller/oj/answer/: AddAnswerController.java
backend/src/main/java/com/kob/backend/controller/oj/record/: GetlistRecordController.java
backend/src/main/java/com/kob/backend/controller/oj/topic/: AddTopicController.java  GetTopicController.java  RemoveTopicController.java
backend/src/main/java/com/kob/backend/controller/pk/: BotInfoController.java
backend/src/main/java/com/kob/backend/controller/user/: RecordController.java
backend/src/main/java/com/kob/backend/controller/user/account/: InfoController.java  LoginController.java  RegisterController.java
backend/src/main/java/com/kob/backend/controller/user/blog/: AddController.java  AllGetListController.java  RemoveController.java
backend/src/main/java/com/kob/backend/controller/user/bot/: AddController.java  GetListController.java  RemoveController.java  UpdateController.java
backend/src/main/java/com/kob/backend/demos/web/: BasicController.java  User.java
backend/src/main/java/com/kob/backend/mapper/: BlogMapper.java  RecordOfQuestionMapper.java  UserMapper.java
backend/src/main/java/com/kob/backend/pojo/: Blog.java  Question.java  RecordOfQuestion.java  Result.java  Topic.java  User.java
backend/src/main/java/com/kob/backend/service/userInterface/: UserService.java
backend/src/main/resources/: application.properties  application.yml
backend/src/main/resources/com/kob/backend/mapper/: UserMapper.xml
backend/src/test/java/com/kob/backend/: TextRedis.java
backendcloud/: pom.xml
backendcloud/backend/: pom.xml
backendcloud/backend/src/main/java/com/kob/backend/: BackendApplication.java
backendcloud/backend/src/main/java/com/kob/backend/config/: SecurityConfig.java  WebSocketConfig.java
backendcloud/backend/src/main/java/com/kob/backend/consumer/: WebSocketServer.java
backendcloud/backend/src/main/java/com/kob/backend/mapper/: AnswerMapper.java  EvaluateMapper.java  TopicMapper.java
backendcloud/backend/src/main/java/com/kob/backend/pojo/: Answer.java  Evaluate.java
backendcloud/backend/src/main/resources/: application.properties
backendcloud/evaluatesystem/: pom.xml
backendcloud/evaluatesystem/src/main/java/com/evaluatesystem/: EvaluateSystemApplication.java
backendcloud/evaluatesystem/src/main/java/com/evaluatesystem/config/: RestTemplateConfig.java
backendcloud/evaluatesystem/src/main/java/com/evaluatesystem/controller/: EvaluateController.java
backendcloud/evaluatesystem/src/main/java/com/evaluatesystem/service/: EvaluateService.java
backendcloud/evaluatesystem/src/main/java/com/evaluatesystem/service/Impl/: EvaluateServiceImpl.java
backendcloud/evaluatesystem/src/main/java/com/evaluatesystem/service/utils/: EvaluateMessage.java  EvaluatePool.java  ProcessUtils.java
backendcloud/globalCode/456c2782-3c9b-470a-a368-d65588f4e9af/: Main.java
backendcloud/globalCode/b1c29563-e5cd-4d50-b8ba-337b4ce08987/: Main.java
web/src/: App.vue  main.js
web/src/assets/images/: brck.avif
web/src/components/: ContentField.vue  NavBar.vue  ResultModal.vue
web/src/router/: index.js
web/src/store/: index.js  topic.js
web/src/views/answer/: AnswerDetail.vue
web/src/views/pk/: PkIndexView.vue
web/src/views/ranklist/: QuestionDetails.vue  RanKlistIndexView.vue
web/src/views/user/bot/: UserBotIndexView.vue
(+63 files in other folders)
